Java: update history to Java 26, add 3 new projects
History updates:
- README-history.md: expanded from 66 to 1,081 lines
- Added detailed features for Java 22-26
- Each version includes code examples and production implications
- reference/versions.md: updated with Java 17-26 details

New projects:
- chat-server: Multi-threaded TCP chat with rooms, private messaging
- file-read-write: Apache POI, CSV, JSON file processing
- store-inventory: Complete inventory management with OOP design

Java 26 highlights (March 2026):
- HTTP/3 for HTTP Client API
- PEM encodings of cryptographic objects
- Structured concurrency (preview)
- Lazy constants (preview)
- Vector API (11th incubator)
- Remove Applet API
- Ahead-of-time object caching