@@ -25,6 +25,8 @@ The primary motivation behind Java was to create a language that could run on an
 - **2018**: Java 11 LTS released, first long-term support under Oracle
 - **2021**: Java 17 LTS released, sealed classes introduced
 - **2023**: Java 21 LTS released with virtual threads (Project Loom)
+- **2024**: Java 22 released, pattern matching and foreign memory APIs standardized
+- **2025**: Java 25 LTS released, with LTS every two years continuing
 
 ## Version History
 
@@ -52,6 +54,971 @@ The primary motivation behind Java was to create a language that could run on an
 | 19 | 2022 | Virtual threads preview |
 | 20 | 2023 | Record patterns, switch pattern matching |
 | 21 | 2023 | LTS, virtual threads, generational ZGC |
+| 22 | 2024 | Unnamed variables, pattern matching standard, foreign memory |
+| 23 | 2024 | Markdown docs, ZGC generational default, module imports |
+| 24 | 2025 | Class-File API, stream gatherers, Security Manager disabled |
+| 25 | 2025 | LTS, scoped values, key derivation API, JFR CPU profiling |
+| 26 | 2026 | HTTP/3, PEM encodings, structured concurrency, lazy constants |
+
+---
+
+## Deep Dive: Java 22 (March 19, 2024)
+
+Java 22 represents a significant maturation of several language features that have been in preview for multiple releases. This version marks the stabilization of pattern matching and record patterns, making Java's data-oriented programming capabilities fully production-ready.
+
+### Release Date
+March 19, 2024 (Oracle JDK 22)
+
+### Key Features
+
+#### 1. Unnamed Variables (JEP 456) — Standard
+
+Unnamed variables allow you to use `_` as a variable name when you don't need to reference the value. This is particularly useful in catch blocks, lambda parameters, and for-each loops.
+
+```java
+// Before: Must name unused variables
+try {
+    riskyOperation();
+} catch (IOException e) {
+    log.warn("Operation failed");
+}
+
+// After: Use _ for unused variables
+try {
+    riskyOperation();
+} catch (IOException _) {
+    log.warn("Operation failed");
+}
+
+// Lambda parameters
+list.forEach((String _) -> System.out.println("item"));
+```
+
+**Why it matters:** Reduces noise in code, improves readability, and signals intent clearly. You immediately know which variables are actually used.
+
+**Production implications:** No behavioral change—purely syntactic. Safe to adopt immediately for cleaner code.
+
+#### 2. Pattern Matching for switch (JEP 441) — Standard
+
+The switch statement can now match against types, guards, and complex patterns. This has been in preview since Java 17 and is now fully standardized.
+
+```java
+// Type patterns
+String formatted = switch (obj) {
+    case Integer i -> "Integer: " + i;
+    case String s when s.length() > 5 -> "Long string: " + s;
+    case String s -> "Short string: " + s;
+    case null -> "null";
+    default -> "Unknown";
+};
+
+// Guarded patterns
+String describe(Object obj) {
+    return switch (obj) {
+        case String s when s.isEmpty() -> "empty string";
+        case String s -> "string of length " + s.length();
+        case int[] arr when arr.length == 0 -> "empty array";
+        case int[] arr -> "array of length " + arr.length;
+        default -> "something else";
+    };
+}
+```
+
+**Why it matters:** Eliminates verbose if-else chains and instanceof checks. Makes code more expressive and less error-prone.
+
+**Production implications:** You can now safely use switch with types in production code. This is a game-changer for data processing pipelines and protocol handling.
+
+#### 3. Record Patterns (JEP 440) — Standard
+
+Record patterns allow you to deconstruct records directly in pattern matching contexts. This has been standardized after previews in Java 19-21.
+
+```java
+record Point(int x, int y) {}
+record Line(Point start, Point end) {}
+
+// Destructuring in switch
+String describe(Line line) {
+    return switch (line) {
+        case Line(Point(0, 0), Point(_, _)) -> "starts at origin";
+        case Line(Point(var x, _), Point(var y, _)) when x == y -> "diagonal";
+        case Line(Point(var x1, var y1), Point(var x2, var y2)) ->
+            "from (%d,%d) to (%d,%d)".formatted(x1, y1, x2, y2);
+    };
+}
+
+// Nested destructuring
+record Address(String city, String country) {}
+record Person(String name, Address address) {}
+
+boolean livesInEU(Person person) {
+    return switch (person) {
+        case Person(_, Address(_, "Germany")) -> true;
+        case Person(_, Address(_, "France")) -> true;
+        case Person(_, Address(_, "Spain")) -> true;
+        default -> false;
+    };
+}
+```
+
+**Why it matters:** Enables deep data extraction without boilerplate. This is especially powerful for API response handling and data transformation.
+
+**Production implications:** Perfect for parsing JSON/XML responses, processing structured data, and building cleaner business logic.
+
+#### 4. Statements Before super() (JEP 447) — Preview
+
+Allows statements to appear before the explicit or implicit `super()` or `this()` call in constructors. Previously, Java required the super/this call to be the first statement.
+
+```java
+// Before: Had to use helper methods
+class Parent {
+    Parent(int value) { this.value = value; }
+    int value;
+}
+
+class Child extends Parent {
+    Child(int input) {
+        super(validate(input));  // Had to call method for validation
+    }
+    static int validate(int input) {
+        if (input < 0) throw new IllegalArgumentException("Negative");
+        return input * 2;
+    }
+}
+
+// After: Can validate directly
+class Child extends Parent {
+    Child(int input) {
+        if (input < 0) throw new IllegalArgumentException("Negative");
+        super(input * 2);  // Direct validation before super()
+    }
+}
+```
+
+**Why it matters:** Eliminates artificial helper methods and makes constructor logic more natural and readable.
+
+**Production implications:** Preview feature—wait for stabilization. Useful for validating arguments before parent initialization.
+
+#### 5. Stream Gatherers (JEP 461) — Preview
+
+Stream gatherers are a new intermediate operation that allows you to define custom transformations on streams. Think of them as the inverse of collectors.
+
+```java
+import java.util.stream.Gatherer;
+
+// Custom gatherer: sliding window
+Gatherer<Integer, ?, List<Integer>> slidingWindow(int size) {
+    return Gatherer.of(
+        () -> new ArrayDeque<Integer>(),  // mutable state
+        (window, element, downstream) -> {
+            window.addLast(element);
+            if (window.size() > size) window.removeFirst();
+            if (window.size() == size) downstream.push(List.copyOf(window));
+            return true;
+        },
+        (window, downstream) -> { /* finisher */ }
+    );
+}
+
+// Usage
+List<List<Integer>> windows = Stream.of(1, 2, 3, 4, 5)
+    .gather(slidingWindow(3))
+    .toList();
+// [[1,2,3], [2,3,4], [3,4,5]]
+```
+
+**Why it matters:** Fills a major gap in the Stream API. Previously, custom intermediate operations required awkward workarounds.
+
+**Production implications:** Preview feature. Great for data processing, windowing operations, and custom stream transformations.
+
+#### 6. Foreign Function & Memory API (JEP 454) — Standard
+
+The Foreign Function & Memory API allows Java code to interoperate with native code and access off-heap memory safely. This replaces JNI with a modern, safe alternative.
+
+```java
+import jdk.incubator.foreign.*;
+
+// Allocate native memory
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+    // Allocate a C-compatible struct
+    MemoryLayout pointLayout = MemoryLayout.structLayout(
+        MemoryLayout.sequenceLayout(2, C_INT),
+        MemoryLayout.paddingLayout(4)
+    );
+
+    MemorySegment point = arena.allocate(pointLayout);
+
+    // Access native memory safely
+    MemoryAccess.setIntAtOffset(point, 0, 10);  // x
+    MemoryAccess.setIntAtOffset(point, 4, 20);  // y
+
+    // Call native functions
+    FunctionDescriptor puts = FunctionDescriptor.of(
+        C_INT, C_POINTER
+    );
+    Linker linker = Linker.nativeLinker();
+    SymbolLookup lookup = linker.defaultLookup();
+    MethodHandle putsHandle = linker.downcallHandle(
+        lookup.find("puts").get(), puts
+    );
+}
+```
+
+**Why it matters:** Provides memory-safe access to native code without the dangers of raw pointers or JNI's complexity.
+
+**Production implications:** Standard now—safe to use in production. Essential for high-performance computing, system programming, and integrating with C/C++ libraries.
+
+#### 7. Region Pinning for G1 GC
+
+G1 GC can now pin memory regions during native operations to prevent them from being moved by the garbage collector.
+
+**Why it matters:** Improves performance of foreign memory operations by reducing the overhead of pinning entire heap.
+
+**Production implications:** Transparent performance improvement—no code changes needed.
+
+### Why Java 22 Matters
+
+Java 22 represents a major step toward Java's "data-oriented" future. With pattern matching and record patterns standardized, Java can now compete with functional languages for data processing while maintaining its performance and type safety advantages.
+
+### Production Implications
+- **Immediate adoption**: Unnamed variables, pattern matching, record patterns, foreign memory API
+- **Watch closely**: Statements before super(), stream gatherers (preview features)
+- **Infrastructure**: Region pinning provides automatic performance benefits
+
+---
+
+## Deep Dive: Java 23 (September 17, 2024)
+
+Java 23 continues the steady evolution of the language with improvements to documentation, garbage collection, and module system enhancements. This release also prepares the groundwork for future language changes.
+
+### Release Date
+September 17, 2024 (Oracle JDK 23)
+
+### Key Features
+
+#### 1. Primitive Types in Patterns (JEP 455) — Preview
+
+Extends pattern matching to primitive types, allowing you to match and destructure primitives in switch expressions and other pattern contexts.
+
+```java
+// Matching primitive types
+String categorize(int value) {
+    return switch (value) {
+        case 0 -> "zero";
+        case int i when i > 0 -> "positive: " + i;
+        case int i -> "negative: " + i;
+    };
+}
+
+// Useful for range-based logic
+double calculateDiscount(double price) {
+    return switch (price) {
+        case double p when p < 10 -> p * 0.95;   // 5% off
+        case double p when p < 50 -> p * 0.90;   // 10% off
+        case double p when p < 100 -> p * 0.85;  // 15% off
+        case double p -> p * 0.80;                // 20% off
+    };
+}
+```
+
+**Why it matters:** Eliminates the need for wrapper classes when doing pattern matching on primitives. Makes numeric processing code cleaner.
+
+**Production implications:** Preview feature. Expected to stabilize in Java 24 or 25. Safe to experiment with in non-production code.
+
+#### 2. Class-File API (JEP 466) — Preview
+
+A new API for reading, writing, and transforming Java class files. This replaces the ASM library that has been the standard for class file manipulation.
+
+```java
+import java.lang.classfile.*;
+
+// Read a class file
+ClassModel classModel = ClassFile.of().parse(myClassBytes);
+
+// Transform a class file
+byte[] transformed = ClassFile.of().transformClass(
+    myClassLoader,
+    "com.example.MyClass",
+    (builder, classModel) -> {
+        // Add logging to all methods
+        for (MethodModel method : classModel.methods()) {
+            builder.withMethod(
+                method.methodName(),
+                method.methodType(),
+                method.accessFlags(),
+                methodBuilder -> {
+                    methodBuilder.withCode(codeBuilder -> {
+                        // Add instrumentation
+                        codeBuilder
+                            .loadConstant("Entering: " + method.methodName())
+                            .invokestatic(System.class, "println",
+                                MethodType.methodType(void.class, String.class));
+                        // Copy original bytecode
+                        codeBuilder.withInstructions(method.code().instructions());
+                    });
+                }
+            );
+        }
+    }
+);
+```
+
+**Why it matters:** Provides a standardized, JDK-integrated way to manipulate class files. Eliminates dependency on external libraries like ASM.
+
+**Production implications:** Preview feature. Will be invaluable for AOP frameworks, monitoring tools, and build-time code generation.
+
+#### 3. Markdown Documentation Comments (JEP 467)
+
+Javadoc now supports Markdown syntax in documentation comments, making it much easier to write rich documentation.
+
+```java
+/**
+ * Calculates the **discounted price** for a product.
+ *
+ * ## Parameters
+ * - `price`: Original price in USD
+ * - `discountPercent`: Discount percentage (0-100)
+ *
+ * ## Returns
+ * The discounted price, or `0.0` if the discount exceeds 100%
+ *
+ * ## Example
+ * ```java
+ * double result = calculatePrice(100.0, 20);
+ * assert result == 80.0;
+ * ```
+ *
+ * @throws IllegalArgumentException if discountPercent is negative
+ */
+public double calculatePrice(double price, double discountPercent) {
+    // implementation
+}
+```
+
+**Why it matters:** Dramatically improves documentation readability and maintainability. No more HTML entities or complex formatting.
+
+**Production implications:** Immediate benefit—start using Markdown in your Javadoc today.
+
+#### 4. ZGC: Generational Mode by Default (JEP 474)
+
+The Z Garbage Collector now operates in generational mode by default. This means short-lived and long-lived objects are collected separately, improving performance for most applications.
+
+**Why it matters:** Generational ZGC provides better throughput and lower latency for typical applications. The non-generational mode will be removed in Java 24.
+
+**Production implications:** Automatic improvement for applications using ZGC. No code changes needed.
+
+#### 5. Module Import Declarations (JEP 476) — Preview
+
+Simplifies module imports by allowing you to import all public classes from a module in a single statement.
+
+```java
+// Before: Import individual packages
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+
+// After: Import entire module
+import module java.base;
+// Now all public classes from java.base are available
+```
+
+**Why it matters:** Reduces import boilerplate significantly. Especially useful for modules with many packages.
+
+**Production implications:** Preview feature. Nice quality-of-life improvement when it stabilizes.
+
+#### 6. Implicitly Declared Classes (JEP 477) — Preview
+
+Allows you to create classes without explicit class declarations. The compiler infers the class structure from the code.
+
+```java
+// Before: Required boilerplate
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!");
+    }
+}
+
+// After: Implicitly declared
+void main() {
+    System.out.println("Hello, World!");
+}
+
+// With parameters
+void main(String[] args) {
+    System.out.println("Hello, " + (args.length > 0 ? args[0] : "World"));
+}
+```
+
+**Why it matters:** Makes simple programs much easier to write and understand. Great for scripts and educational purposes.
+
+**Production implications:** Preview feature. Excellent for quick prototypes and scripting.
+
+#### 7. Structured Concurrency (JEP 480) — Preview
+
+Structured concurrency treats groups of concurrent tasks as a unit, with clear lifecycle management and error propagation.
+
+```java
+import java.util.concurrent.StructuredTaskScope;
+
+String fetchUserDetails(int userId) throws Exception {
+    try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
+        // Launch concurrent tasks
+        Subtask<User> userTask = scope.fork(() -> fetchUser(userId));
+        Subtask<List<Order>> ordersTask = scope.fork(() -> fetchOrders(userId));
+        Subtask<Preferences> prefsTask = scope.fork(() -> fetchPreferences(userId));
+
+        // Wait for all tasks
+        scope.join();
+        scope.throwIfFailed();
+
+        // All tasks completed successfully
+        User user = userTask.get();
+        List<Order> orders = ordersTask.get();
+        Preferences prefs = prefsTask.get();
+
+        return formatUserDetails(user, orders, prefs);
+    }
+}
+```
+
+**Why it matters:** Makes concurrent code easier to write, read, and debug. Prevents common concurrency bugs like leaked tasks.
+
+**Production implications:** Preview feature. Will revolutionize how we write concurrent Java code.
+
+#### 8. Scoped Values (JEP 481) — Preview
+
+Scoped values provide a way to share data within a thread and its child threads without using thread-local variables.
+
+```java
+import java.lang.ScopedValue;
+
+// Define scoped value
+private static final ScopedValue<User> CURRENT_USER = ScopedValue.newInstance();
+
+// Set and use within a scope
+void processRequest(Request request) {
+    User user = authenticate(request);
+    ScopedValue.where(CURRENT_USER, user).run(() -> {
+        // All code in this scope can access CURRENT_USER.get()
+        handleRequest(request);
+    });
+}
+
+// Access from anywhere in the call chain
+void handleRequest(Request request) {
+    User user = CURRENT_USER.get();  // No parameter passing needed
+    log.info("Processing for: " + user.name());
+}
+```
+
+**Why it matters:** Cleaner alternative to ThreadLocal. Automatically cleaned up when scope exits. Perfect for request-scoped data in web applications.
+
+**Production implications:** Preview feature. Will replace ThreadLocal in many use cases.
+
+### Why Java 23 Matters
+
+Java 23 continues to refine the language's core capabilities while preparing for future innovations. The combination of structured concurrency and scoped values signals a major shift toward more maintainable concurrent programming.
+
+### Production Implications
+- **Immediate adoption**: Markdown documentation, ZGC generational default
+- **Experiment now**: Primitive types in patterns, module imports, implicitly declared classes
+- **Watch closely**: Structured concurrency, scoped values, Class-File API
+
+---
+
+## Deep Dive: Java 24 (March 18, 2025)
+
+Java 24 brings several long-awaited features to production readiness while introducing experimental capabilities for future performance improvements. This release marks the removal of the Security Manager and significant improvements to the JVM.
+
+### Release Date
+March 18, 2025 (Oracle JDK 24)
+
+### Key Features
+
+#### 1. Class-File API (JEP 484) — Standard
+
+The Class-File API, previewed in Java 23, is now standardized. This provides a stable, JDK-integrated API for reading, writing, and transforming Java class files.
+
+**Why it matters:** Eliminates dependency on third-party libraries like ASM for class file manipulation. Better integration with the JDK means fewer compatibility issues.
+
+**Production implications:** Safe to use in production now. Essential for build tools, AOP frameworks, and monitoring solutions.
+
+#### 2. Stream Gatherers (JEP 461) — Standard
+
+Stream gatherers, previewed in Java 22, are now standardized. This adds a powerful new intermediate operation to the Stream API.
+
+```java
+// Sliding window gatherer
+Gatherer<Integer, ?, List<Integer>> slidingWindow(int size) {
+    return Gatherer.of(
+        () -> new ArrayDeque<Integer>(),
+        (window, element, downstream) -> {
+            window.addLast(element);
+            if (window.size() > size) window.removeFirst();
+            if (window.size() == size) downstream.push(List.copyOf(window));
+            return true;
+        }
+    );
+}
+
+// Usage
+List<List<Integer>> windows = Stream.of(1, 2, 3, 4, 5)
+    .gather(slidingWindow(3))
+    .toList();
+```
+
+**Why it matters:** Fills a major gap in the Stream API. Custom intermediate operations are now first-class citizens.
+
+**Production implications:** Safe to use in production. Great for data processing pipelines.
+
+#### 3. Ahead-of-Time Class Loading & Linking (JEP 483)
+
+Improves startup performance by loading and linking classes at CDS (Class Data Sharing) archive time rather than at runtime.
+
+**Why it matters:** Reduces application startup time significantly, especially for large applications with many classes.
+
+**Production implications:** Automatic improvement for applications using CDS archives. No code changes needed.
+
+#### 4. Permanently Disable Security Manager (JEP 486)
+
+The Security Manager, which has been deprecated since Java 17, is now permanently disabled. It was designed for applets but is no longer suitable for modern security models.
+
+```java
+// This will now throw UnsupportedOperationException
+System.setSecurityManager(new SecurityManager());
+```
+
+**Why it matters:** Simplifies the JDK and removes a major source of complexity. Modern applications should use container-level security instead.
+
+**Production implications:** Remove any Security Manager usage from your applications. Use container security, SELinux, or similar mechanisms instead.
+
+#### 5. Synchronize Virtual Threads Without Pinning (JEP 491)
+
+Virtual threads can now synchronize on monitors without pinning the platform thread. This is a major performance improvement for code using `synchronized` blocks.
+
+```java
+// Before: synchronized would pin virtual threads
+synchronized void process() {
+    // This would block the carrier thread
+    blockingOperation();
+}
+
+// After: No pinning
+synchronized void process() {
+    // Virtual thread can unmount during blocking operations
+    blockingOperation();
+}
+```
+
+**Why it matters:** Previously, virtual threads were pinned during synchronized blocks, negating their benefits. Now you can use synchronized freely.
+
+**Production implications:** Major performance improvement for existing code using `synchronized`. No code changes needed.
+
+#### 6. ZGC: Remove Non-Generational Mode (JEP 490)
+
+The non-generational mode of ZGC is removed. ZGC now always operates in generational mode, which provides better performance for most applications.
+
+**Why it matters:** Simplifies ZGC configuration and ensures optimal performance by default.
+
+**Production implications:** Remove any `-XX:-ZGenerational` flags from your JVM configuration.
+
+#### 7. Compact Object Headers (JEP 490) — Experimental
+
+Reduces the memory overhead of object headers from 12-16 bytes to 8 bytes. This is an experimental feature that can significantly reduce memory usage.
+
+**Why it matters:** Object headers account for a significant portion of heap memory, especially for objects with many small fields. Reducing header size can improve memory efficiency by 10-20%.
+
+**Production implications:** Experimental—enable with `-XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders`. Monitor memory usage closely.
+
+#### 8. Key Derivation Function API (JEP 478) — Preview
+
+A new API for standard key derivation functions (KDFs) used in cryptographic operations.
+
+```java
+import java.security.KeyDerivationFunction;
+import java.security.spec.NamedParameterSpec;
+
+// Derive a key from a password
+SecretKey deriveKey(String password, byte[] salt) {
+    KDF kdf = KDF.getInstance("HKDF-SHA256");
+    KeyDerivationParameters params = new KeyDerivationParameters.Builder()
+        .setNamedParameterSpec(NamedParameterSpec.HKDF_SHA256)
+        .setSalt(salt)
+        .setInfo("encryption-key".getBytes())
+        .build();
+
+    return kdf.deriveKey("AES", password.getBytes(StandardCharsets.UTF_8), params, 256);
+}
+```
+
+**Why it matters:** Provides standardized, secure key derivation without relying on third-party libraries.
+
+**Production implications:** Preview feature. Essential for implementing modern encryption schemes.
+
+#### 9. Quantum-Resistant Cryptography (JEP 497)
+
+Adds support for quantum-resistant key encapsulation mechanisms (KEMs) to protect against future quantum computing attacks.
+
+```java
+// Generate a quantum-resistant key pair
+KeyPairGenerator kpg = KeyPairGenerator.getInstance("ML-KEM-768");
+KeyPair keyPair = kpg.generateKeyPair();
+
+// Encapsulate a shared secret
+KeyEncapsulation ke = KeyEncapsulation.getInstance("ML-KEM-768");
+ke.init(keyPair.getPublic());
+byte[] ciphertext = ke.encapsulate();
+SecretKey sharedSecret = ke.getSecretKey();
+```
+
+**Why it matters:** Prepares Java applications for the post-quantum cryptography era. Essential for long-term security.
+
+**Production implications:** Start planning migration to quantum-resistant algorithms for sensitive data.
+
+### Why Java 24 Matters
+
+Java 24 represents a major step forward in performance and security. The permanent removal of the Security Manager simplifies the platform, while virtual thread synchronization and compact headers improve performance significantly.
+
+### Production Implications
+- **Immediate adoption**: Class-File API, stream gatherers, Security Manager disabled
+- **Monitor**: Virtual thread synchronization, ZGC changes, ahead-of-time class loading
+- **Plan for**: Compact object headers, quantum-resistant cryptography
+
+---
+
+## Deep Dive: Java 25 (September 2025) — LTS
+
+Java 25 is a Long-Term Support (LTS) release, providing stability and new features for enterprise deployments. It builds on the innovations of Java 22-24 while introducing several new preview features.
+
+### Release Date
+September 2025 (Oracle JDK 25)
+
+### Key Features
+
+#### 1. Stable Values (JEP 494) — Preview
+
+Stable values provide a way to define lazily computed, thread-safe, and immutable values. They're similar to `Supplier` but with better performance characteristics.
+
+```java
+import java.lang.StableValue;
+
+// Define a stable value
+private final StableValue<ExpensiveObject> cache = StableValue.of();
+
+// Compute on first access
+ExpensiveObject getExpensiveObject() {
+    return cache.orElseSet(() -> {
+        // Expensive computation happens only once
+        return new ExpensiveObject();
+    });
+}
+```
+
+**Why it matters:** Better performance than lazy initialization patterns. Thread-safe by design without synchronization overhead.
+
+**Production implications:** Preview feature. Excellent for caching and lazy initialization.
+
+#### 2. Scoped Values (JEP 481) — Standard
+
+Scoped values, previewed in Java 23, are now standardized. This provides a clean alternative to ThreadLocal for thread-scoped data.
+
+```java
+private static final ScopedValue<User> CURRENT_USER = ScopedValue.newInstance();
+
+void processRequest(Request request) {
+    User user = authenticate(request);
+    ScopedValue.where(CURRENT_USER, user).run(() -> {
+        // All code in this scope can access CURRENT_USER.get()
+        handleRequest(request);
+    });
+}
+```
+
+**Why it matters:** Safer and more efficient than ThreadLocal. Automatically cleaned up when scope exits.
+
+**Production implications:** Safe to use in production. Replace ThreadLocal usage where appropriate.
+
+#### 3. Module Import Declarations (JEP 476) — Preview
+
+Module import declarations, previewed in Java 23, continue in preview status.
+
+#### 4. Compact Source Files and Instance Main Methods (JEP 495) — Preview
+
+Simplifies writing small programs by reducing boilerplate. Instance main methods allow main methods to be non-static.
+
+```java
+// Before
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!");
+    }
+}
+
+// After: Compact source file
+void main() {
+    System.out.println("Hello, World!");
+}
+
+// With instance main method
+class App {
+    void main() {
+        System.out.println("Running app");
+    }
+}
+```
+
+**Why it matters:** Makes Java more accessible for beginners and better for scripting.
+
+**Production implications:** Preview feature. Great for quick prototypes and command-line tools.
+
+#### 5. Flexible Constructor Bodies (JEP 482) — Preview
+
+Allows statements before the super() or this() call in constructors, expanding on the preview from Java 22.
+
+```java
+class Parent {
+    Parent(int value) { this.value = value; }
+    int value;
+}
+
+class Child extends Parent {
+    Child(int input) {
+        if (input < 0) throw new IllegalArgumentException("Negative");
+        super(input * 2);
+    }
+}
+```
+
+**Why it matters:** More natural constructor logic without helper methods.
+
+**Production implications:** Preview feature. Improves code readability.
+
+#### 6. Ahead-of-Time Command-Line Ergonomics (JEP 498)
+
+Simplifies using ahead-of-time compilation with better command-line options and defaults.
+
+**Why it matters:** Makes AOT compilation more accessible and easier to use.
+
+**Production implications:** Improves startup time for applications using AOT.
+
+#### 7. JFR CPU-Time Profiling (JEP 499)
+
+Adds CPU-time profiling capabilities to Java Flight Recorder, enabling more accurate performance analysis.
+
+```java
+// Enable CPU-time profiling
+jdk.management.jfr.FlightRecorderMXBean jfr = ...
+
+jfr.setConfiguration(Configuration.getConfiguration("profile"));
+jfr.start();
+
+// Later: Analyze CPU usage
+RecordedFlight flight = jfr.stop();
+```
+
+**Why it matters:** Provides more accurate performance data than wall-clock profiling.
+
+**Production implications:** Essential for performance tuning and optimization.
+
+#### 8. Key Derivation Function API (JEP 478) — Standard
+
+The KDF API, previewed in Java 24, is now standardized.
+
+**Why it matters:** Standardized, secure key derivation without third-party dependencies.
+
+**Production implications:** Safe to use in production for cryptographic operations.
+
+#### 9. Compact Object Headers (JEP 490) — Experimental
+
+Continues as experimental, with further optimizations and wider GC support.
+
+**Why it matters:** Further memory efficiency improvements.
+
+**Production implications:** Continue monitoring for production readiness.
+
+#### 10. Generational Shenandoah
+
+The Shenandoah garbage collector now supports generational mode, providing better performance for applications with mixed object lifetimes.
+
+**Why it matters:** More GC options for low-latency applications.
+
+**Production implications:** Try generational Shenandoah if you're using Shenandoah for latency-sensitive applications.
+
+### Why Java 25 Matters
+
+As an LTS release, Java 25 provides a stable foundation for enterprise applications while continuing to innovate. The standardization of scoped values and KDF API provides immediate value, while preview features prepare for future improvements.
+
+### Production Implications
+- **Immediate adoption**: Scoped values, KDF API, JFR CPU profiling
+- **Evaluate**: Compact source files, flexible constructor bodies, ahead-of-time improvements
+- **Monitor**: Stable values, compact object headers, generational Shenandoah
+
+---
+
+## Deep Dive: Java 26 (March 2026)
+
+Java 26 continues the six-month release cadence with several exciting preview features and important removals. This release prepares for the future of Java while cleaning up legacy APIs.
+
+### Release Date
+March 2026 (Oracle JDK 26)
+
+### Key Features
+
+#### 1. HTTP/3 for HTTP Client API (JEP 500) — Preview
+
+Adds support for HTTP/3 to the Java HTTP Client API, providing improved performance through multiplexed streams and reduced latency.
+
+```java
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+
+// HTTP/3 is transparent - just use the existing API
+HttpClient client = HttpClient.newBuilder()
+    .version(HttpClient.Version.HTTP_3)  // New: HTTP/3 support
+    .build();
+
+HttpRequest request = HttpRequest.newBuilder()
+    .uri(URI.create("https://example.com/api"))
+    .build();
+
+HttpResponse<String> response = client.send(request,
+    HttpResponse.BodyHandlers.ofString());
+```
+
+**Why it matters:** HTTP/3 provides better performance on unreliable networks and reduces latency through connection migration.
+
+**Production implications:** Preview feature. Will be transparent to existing code once stabilized.
+
+#### 2. PEM Encodings of Cryptographic Objects (JEP 501) — Preview
+
+Adds support for PEM (Privacy-Enhanced Mail) encoding/decoding of cryptographic objects, a common format used in many systems.
+
+```java
+import java.security.KeyPair;
+import java.security.PEMEncoder;
+import java.security.PEMDecoder;
+
+// Encode a key to PEM format
+PEMEncoder encoder = new PEMEncoder();
+String pemEncoded = encoder.encodeToString(keyPair.getPrivate());
+
+// Decode from PEM format
+PEMDecoder decoder = new PEMDecoder();
+PrivateKey key = decoder.decode(pemEncoded, PrivateKey.class);
+```
+
+**Why it matters:** Simplifies integration with systems that use PEM format (TLS certificates, SSH keys, etc.).
+
+**Production implications:** Preview feature. Will simplify certificate and key management.
+
+#### 3. Structured Concurrency (JEP 480) — Preview
+
+Structured concurrency, previewed in Java 23, continues in preview with improvements.
+
+#### 4. Lazy Constants (JEP 502) — Preview
+
+Provides a way to define constants that are computed lazily on first access, with thread-safe initialization.
+
+```java
+// Lazy constant - computed once on first access
+private static final LazyConstant<Config> CONFIG =
+    LazyConstant.of(() -> loadConfig());
+
+Config getConfig() {
+    return CONFIG.get();  // Computed on first call, cached thereafter
+}
+```
+
+**Why it matters:** Cleaner alternative to double-checked locking for lazy initialization.
+
+**Production implications:** Preview feature. Simplifies initialization patterns.
+
+#### 5. Vector API (11th Incubator) — Incubator
+
+The Vector API continues its incubation, providing platform-independent SIMD vector operations for high-performance computing.
+
+```java
+import jdk.incubator.vector.*;
+
+// Vector operations for SIMD processing
+static final VectorSpecies<Float> SPECIES = FloatVector.SPECIES_PREFERRED;
+
+void addArrays(float[] a, float[] b, float[] result) {
+    int i = 0;
+    for (; i < SPECIES.loopBound(a.length); i += SPECIES.length()) {
+        FloatVector va = FloatVector.fromArray(SPECIES, a, i);
+        FloatVector vb = FloatVector.fromArray(SPECIES, b, i);
+        FloatVector vc = va.add(vb);
+        vc.intoArray(result, i);
+    }
+    // Handle remaining elements
+    for (; i < a.length; i++) {
+        result[i] = a[i] + b[i];
+    }
+}
+```
+
+**Why it matters:** Enables high-performance computing without platform-specific code.
+
+**Production implications:** Incubator status. Essential for scientific computing and data processing.
+
+#### 6. Primitive Types in Patterns (JEP 455) — Preview
+
+Continues in preview status.
+
+#### 7. Remove Applet API (JEP 503)
+
+The Applet API, which has been deprecated since Java 9, is finally removed. This is the last step in removing applet support from Java.
+
+```java
+// These classes no longer exist:
+// java.applet.Applet
+// java.applet.AppletContext
+// java.applet.AppletStub
+// java.applet.AudioClip
+```
+
+**Why it matters:** Cleans up the JDK by removing legacy APIs that are no longer used.
+
+**Production implications:** Remove any code that references Applet classes. This is a breaking change.
+
+#### 8. Ahead-of-Time Object Caching with Any GC (JEP 504)
+
+Extends AOT compilation to include object caching, allowing the JVM to cache frequently created objects.
+
+**Why it matters:** Reduces object creation overhead and garbage collection pressure.
+
+**Production implications:** Transparent performance improvement.
+
+#### 9. G1 GC: Improve Throughput by Reducing Synchronization (JEP 505)
+
+Reduces synchronization overhead in the G1 garbage collector, improving throughput for multi-threaded applications.
+
+**Why it matters:** Better performance for applications with high allocation rates.
+
+**Production implications:** Automatic improvement—no code changes needed.
+
+#### 10. Prepare to Make `final` Mean Final (JEP 506)
+
+Lays the groundwork for making `final` truly enforce immutability guarantees at the language level.
+
+**Why it matters:** Future-proofs the language by strengthening immutability guarantees.
+
+**Production implications:** Long-term change. Start reviewing code that relies on final field reassignment via reflection.
+
+### Why Java 26 Matters
+
+Java 26 continues to push Java forward while cleaning up legacy APIs. The HTTP/3 support and PEM encodings show Java's commitment to modern standards, while the Applet API removal marks the end of an era.
+
+### Production Implications
+- **Plan for**: Applet API removal (breaking change)
+- **Experiment**: HTTP/3, PEM encodings, lazy constants, structured concurrency
+- **Watch closely**: Vector API, object caching, final enforcement
+
+---
 
 ## Community and Adoption
 
@@ -59,8 +1026,56 @@ Java has one of the largest developer communities in the world. It powers billio
 
 Major adopters include banks, insurance companies, healthcare providers, and government agencies. The Android ecosystem, while using a different runtime (ART instead of JVM), uses Java as its primary language.
 
+### Recent Trends
+
+- **Cloud Native**: Java continues to grow in cloud-native development with frameworks like Spring Boot, Quarkus, and Micronaut optimizing for cloud environments.
+- **GraalVM**: Native image compilation enables Java to compete with Go and Rust for startup time and memory footprint.
+- **Virtual Threads**: The adoption of virtual threads in Java 21+ is revolutionizing how Java handles concurrency.
+- **Data Processing**: With pattern matching, record patterns, and stream gatherers, Java is becoming increasingly competitive for data processing tasks.
+
+### Framework Ecosystem
+
+- **Spring Boot 3.x**: Jakarta EE namespace, virtual thread support
+- **Quarkus**: Native compilation, cloud-native optimization
+- **Micronaut**: Compile-time DI, GraalVM support
+- **Helidon**: Microservices framework from Oracle
+- **Jakarta EE**: Enterprise Java standard
+
+---
+
 ## Current Status
 
 Java continues to evolve with a six-month release cadence. It remains one of the most popular programming languages according to TIOBE and Stack Overflow surveys. Oracle provides long-term support (LTS) releases every two years, ensuring stability for enterprise deployments.
 
-The language is actively developing Project Loom for lightweight concurrency, Project Panama for foreign function interfaces, and Project Valhalla for value types. Java's ecosystem includes frameworks like Spring, Jakarta EE, and Micronaut that continue to drive innovation.
+### Active Projects
+
+- **Project Loom**: Virtual threads (delivered in Java 21), structured concurrency, scoped values
+- **Project Panama**: Foreign Function & Memory API (delivered in Java 22)
+- **Project Valhalla**: Value types, primitive object layouts (experimental)
+- **Project Leyden**: Ahead-of-time compilation, reproducible builds
+- **Project Amber**: Language features (records, pattern matching, sealed classes)
+
+### LTS Releases
+
+| Version | Release Date | Key LTS Features |
+|---------|--------------|------------------|
+| 11 | September 2018 | HTTP client, local variable inference |
+| 17 | September 2021 | Sealed classes, foreign function API |
+| 21 | September 2023 | Virtual threads, pattern matching |
+| 25 | September 2025 | Scoped values, KDF API, JFR profiling |
+
+### What's Next
+
+The Java roadmap focuses on:
+1. **Continued language simplification**: More preview features for compact source files and implicit classes
+2. **Performance improvements**: Compact object headers, better GC algorithms
+3. **Security enhancements**: Quantum-resistant cryptography, safer defaults
+4. **Developer experience**: Better tooling, faster compilation, improved diagnostics
+
+Java's future is bright. With a predictable release cadence, strong backward compatibility, and a vibrant ecosystem, Java will continue to be a top choice for developers for decades to come.
+
+---
+
+*Last updated: March 2026*
+*Java SE 26 (Oracle JDK 26) is the latest release.*
+*Java SE 25 (Oracle JDK 25) is the latest LTS release.*
